[gd_scene format=3 uid="uid://cqydhp0q2rk7l"]

[ext_resource type="PackedScene" uid="uid://cvroc13lcl75m" path="res://Scenes/UI/Intermission/card_selector.tscn" id="1_gdsmo"]
[ext_resource type="Script" uid="uid://47uq1sx5vlrt" path="res://Scripts/UI/EnemySelection/enemy_selection.gd" id="1_ijbvw"]
[ext_resource type="Script" uid="uid://bu70cwkunbwl" path="res://Scripts/UI/EnemySelection/Biomes.gd" id="3_enisl"]
[ext_resource type="Script" uid="uid://dwcsnlvkl6y2j" path="res://Scripts/UI/EnemySelection/EnemyOrganizer.gd" id="3_gsqul"]
[ext_resource type="PackedScene" uid="uid://c0dq60hmfb20e" path="res://Scenes/UI/Player/player.tscn" id="4_5sm1h"]
[ext_resource type="PackedScene" uid="uid://dac2v2br3grnx" path="res://Scenes/Characters/Berserker/berserker.tscn" id="5_pgxp2"]
[ext_resource type="PackedScene" uid="uid://bwqs5wchg56o" path="res://Scenes/UI/PlayerInventory/player_cards.tscn" id="6_ksv00"]
[ext_resource type="Script" uid="uid://ditoib7r7jdik" path="res://Scripts/UI/EnemySelection/EnemyDeckDisplay.gd" id="8_xkyks"]
[ext_resource type="PackedScene" uid="uid://dluppe6lcdir0" path="res://Scenes/UI/Player/consumable_manager.tscn" id="9_abhd6"]
[ext_resource type="PackedScene" uid="uid://bua11o6oudri4" path="res://Scenes/UI/Player/rune_manager.tscn" id="10_objcs"]
[ext_resource type="PackedScene" uid="uid://douvo7o182s2" path="res://Scenes/UI/UIElements/bottom_nav_bar.tscn" id="11_l63ti"]
[ext_resource type="PackedScene" uid="uid://dryjn7f2ubrq" path="res://Scenes/UI/Menu/menu.tscn" id="13_7jatg"]
[ext_resource type="Texture2D" uid="uid://cj5xnevnwa8tu" path="res://Resources/Art/UIElements/Biome_selection_bg_panel.png" id="14_5d43i"]

[node name="EnemySelection" type="Node2D" unique_id=459338302 groups=["card manager", "current scene"]]
script = ExtResource("1_ijbvw")

[node name="CardSelector" parent="." unique_id=831940967 instance=ExtResource("1_gdsmo")]

[node name="Biomes" type="Node2D" parent="." unique_id=1009804651]
script = ExtResource("3_enisl")

[node name="EnemyOrganizer" type="Node2D" parent="." unique_id=2107365870]
script = ExtResource("3_gsqul")

[node name="Player" parent="." unique_id=807179654 instance=ExtResource("4_5sm1h")]
visible = false

[node name="Berserker" parent="Player" unique_id=762717941 instance=ExtResource("5_pgxp2")]

[node name="EnemyDeckDisplay" type="Node2D" parent="." unique_id=1317015398]
script = ExtResource("8_xkyks")

[node name="PlayerInventoryScreen" parent="." unique_id=361836966 instance=ExtResource("6_ksv00")]
visible = false
z_index = 3

[node name="ConsumableManger" parent="." unique_id=1982308863 instance=ExtResource("9_abhd6")]
visible = false

[node name="RuneManager" parent="." unique_id=2143828800 instance=ExtResource("10_objcs")]

[node name="TooltipTimer" type="Timer" parent="." unique_id=441876137]

[node name="BottomNavBar" parent="." unique_id=623540147 instance=ExtResource("11_l63ti")]

[node name="BiomeBG" type="TextureRect" parent="." unique_id=2044578307]
visible = false
show_behind_parent = true
offset_left = 523.0
offset_top = 296.0
offset_right = 1398.0
offset_bottom = 506.0
texture = ExtResource("14_5d43i")

[node name="Menu" parent="." unique_id=990599804 instance=ExtResource("13_7jatg")]
